samples/_failures_safe/1761045002_9efab1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1b0040f.c: In function ‘print_shortest_paths’:
./samples/SAFE/__tmp_e1b0040f.c:152:5: error: expected expression at end of input
  152 |     for (int i = 0; i < graph->node_count;
      |     ^~~
./samples/SAFE/__tmp_e1b0040f.c:152:5: error: expected declaration or statement at end of input
